--- a/example/res/values/strings.xml
+++ b/example/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="hello_world">Hello MultiSelectListPrefereceCompat!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="launch_settings_button">Open settings screen</string>
+    <string name="settings_button">Open settings screen</string>
+    <string name="toggle_button">Toggle setting values</string>
 
 </resources>
